Adds a `NoMissingTypes` applicability test to `MigrateCollectionsSingletonList`
The `JavaTemplate` engine can throw an `IllegalStateException` when there are missing type attributions. To guard against this in the presence of Lombok annotations, the recipe `MigrateCollectionsSingletonList` now uses `NoMissingTypes` as an additional single source applicability test.

Issue: #150